calcel line add

--- a/app/mdxes/log-01.mdx
+++ b/app/mdxes/log-01.mdx
@@ -33,7 +33,7 @@ Student요금제로 4개월 가량을 사용했는데, 프로젝트의 볼륨이
 
 그렇게 코딩을 위해 집에 있던 아이패드를 가져오고, 매직키보드도 중고로 구매했다.
 
-코딩을 위해서라면…!! ~~결국 매직키보드를 살 운명이었던 앱등이~~
+코딩을 위해서라면…!! <strike>결국 매직키보드를 살 운명이었던 앱등이</strike>
 
 그래서 ‘Jump Desktop’을 설치하고, 아이패드에도 설치해줬다.
 
