memory page done

--- a/mdxes/memory/memory-01.mdx
+++ b/mdxes/memory/memory-01.mdx
@@ -1,7 +1,7 @@
 ---
-title: whatsupp
-description: shit
-date: 2023-10-02
+title: 2023 10 16
+description: 1st diary
+date: 2023-10-16
 ---
 
-###이런 거 적으면 안되겠지?
+이제 군 생활이 29%도 안 남았다. 많이 했는데, 많이 했는데도 적응이 안되는 곳이다 참... 적응은 했는데, 이제 적응하기 싫은 걸지도 모르겠다. 짬찌일 때는 아무 생각 없이, 그나마 비교적으로 시키면 의문은 있었지만 시키는대로 했고, 규칙은 규칙이니까 지켜야지 이런 생각이 있었는데, 이제는 점점 불만만 많아지는 느낌이다. 열심히 하면 손해보는 조직, 말이 되는 걸까? 이 조직이 망한다 해도 전혀 이상하지 않다. 이제 정말 집 가고 싶다 집 ~
